# integrityd

./: README.mkd  checkfile.cc  checksum.hh  crc32.cc  crc32.hh  descriptor.cc  descriptor.hh  main.cc  meson.build  operations.cc  operations.hh
tests/: test_file_chunker.cc
